--- a/final-theme.css
+++ b/final-theme.css
@@ -12,26 +12,26 @@ html:not(.style-scope) {
 
     /*===================Start of custom variables==============================*/
 
-    --cust-ytmusic-play-nav-color: #4b3e5e;
-    --cust-ytmusic-dark-background: #221d2b;
-    --cust-ytmusic-dark-foreground: #2e263a;
+    --cust-ytmusic-play-nav-color: #421f1f;
+    --cust-ytmusic-dark-background: #271616;
+    --cust-ytmusic-dark-foreground: #2d1919;
 
-    --cust-ytmusic-light-text-1: #e2e1dd;
-    --cust-ytmusic-light-2: #d0b5d9;
-    --cust-ytmusic-light-3: #cbbdd3;
-    --cust-ytmusic-light-4: #c1a9c685;
-    --cust-ytmusic-light-5: #d0b5d9;
+    --cust-ytmusic-light-text-1: #c6c3c1;
+    --cust-ytmusic-light-2: #c8a1a1;
+    --cust-ytmusic-light-3: #d3bdbd;
+    --cust-ytmusic-light-4: #c6a9a985;
+    --cust-ytmusic-light-5: #d9b5b5;
 
-    --cust-ytmusic-medium-1: #988b9eb8;
-    --cust-ytmusic-medium-2: #d5d2d0;
-    --cust-ytmusic-medium-3: #beb2c2;
+    --cust-ytmusic-medium-1: #9e8b8bb8;
+    --cust-ytmusic-medium-2: #d5d0d0;
+    --cust-ytmusic-medium-3: #a68282;
     --cust-ytmusic-medium-4: #8d8d8d;
-    --cust-ytmusic-medium-5: #442e4b;
+    --cust-ytmusic-medium-5: #4b2e2e;
 
-    --cust-ytmusic-subscribe-color: #9f6bcf;
-    --cust-ytmusic-playbutton-color: #9e89aa;
-    --cust-ytmusic-tertiary-nav-button-color: #a99cb1;
-    --cust-ytmusic-nowplaying-color: #c79dee;
+    --cust-ytmusic-subscribe-color: #a84949;
+    --cust-ytmusic-playbutton-color: #885454;
+    --cust-ytmusic-tertiary-nav-button-color: #8d5d5d;
+    --cust-ytmusic-nowplaying-color: #cc9d9d;
 
     --cust-ytmusic-main-text-1: #ffffffc7;
     --cust-ytmusic-header-text-1: #ffffffc9;
